# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2011
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#

Changes since last release:

VERSION 0.6.xx
DATE 0x/xx/2011
41st Alpha Release

NEWS:

NEW: [features/enhancements]
+New icon for showing bookmarks in the bookmark margin.

LIBRARY:

BUG FIXES:
+Fix crash when restoring Shelf layout if a some tabs are not reloaded.

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.6.20
DATE 02/26/2011
40th Alpha Release

NEWS:
This release contains a number of fixes for long standing issues including a
major rework of the Style Editor dialog. The window layout of the Shelf's tabs
are now saved and restored between running sessions of Editra. New shelf window
for managing, navigating, and viewing all set Bookmarks. See the changelog below
for more details about this release.

NEW: [features/enhancements]
+Remember Shelf layout and selected tab when application is restarted.
+Improve Python autoindenter to better handle more conditions in regards to
brackets and parens.
+Autocomp and calltip shortcuts are now customizable.
+Add Bookmark manager window to Shelf
+Support storing/loading user configuration from XDG standard location on Linux.
+Persist find settings between sessions.
+Improvements to the Style Editor (ability to remove style sheets)
+Display Font setting now also applies to the font used by the tabs.

LIBRARY:
+Support ControlBars in on left and right side of ControlBox.
+Add ProcessThreadBase class to allow for customizing the creation of the Popen object.
+Add support for displaying breakpoint markers in editor buffer.

BUG FIXES:
+Fix issue that could result in crash when rapidly clicking on notebook buttons.
+Fix minor display issue in update checker gauge.
+Fix behavior of left/right arrow key motions in vim emulation mode to better
emulate vi.